--- a/src/app/components/user-new/user-new.component.html
+++ b/src/app/components/user-new/user-new.component.html
@@ -46,9 +46,9 @@
               #profile="ngModel"
               style="width: 100%;"
               required>
-              <option>ADMIN</option>
-              <option>CUSTOMER</option>
-              <option>TECHNICIAN</option>
+              <option>ROLE_ADMIN</option>
+              <option>ROLE_CUSTOMER</option>
+              <option>ROLE_TECHNICIAN</option>
             </select>
           <span class="help-block" *ngIf="profile.invalid && profile.dirty">Profile is required</span>
         </div>
