--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -1,7 +1,7 @@
 <aside class="main-sidebar">
   <section class="sidebar">
     <ul class="sidebar-menu" data-widget="tree">
-      <li class="treeview">
+      <li class="treeview" *ngIf="shared.user.profile == 'ADMIN'">
         <a href="#">
           <i class="fa fa-edit"></i> <span>Users</span>
           <span class="pull-right-container">
