--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -7,7 +7,7 @@
     <a href="#" class="sidebar-toggle" data-toggle="push-menu" role="button">
       <span class="sr-only">Toggle navigation</span>
     </a>
-    <div style="align-content:center">
+    <div class="navbar-custom-menu">
         <p style="color:white">{{ shared.user.email }} - {{ shared.user.profile }} |  <button class="btn btn-link" (click)="signOut()"><font style="color:white">Sign out</font></button></p>
     </div>
   </nav>
