--- a/src/app/components/user-list/user-list.component.html
+++ b/src/app/components/user-list/user-list.component.html
@@ -2,7 +2,7 @@
   <strong>{{ message.text }}</strong>
 </div>
 <div class="row">
-<div class="col-md-6">
+<div class="col-md-8">
 <div class="box">
   <div class="box-header with-border">
     <h3 class="box-title">User List</h3>
@@ -12,10 +12,14 @@
       <tr>
         <th>Email</th>
         <th>Profile</th>
+        <th style="width: 10px">&nbsp;</th>
+        <th style="width: 10px">&nbsp;</th>
       </tr>
       <tr *ngFor="let user of listUser">
         <td>{{user.email}}</td>
         <td>{{user.profile}}</td>
+        <td><button class="btn btn-success" (click)="detail(user.id)">Detail</button></td>
+        <td><button class="btn btn-danger" (click)="delete(user.id)">Delete</button></td>
       </tr>
     </table>
   </div>
