--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -22,7 +22,7 @@
         </a>
         <ul class="treeview-menu">
           <li><a [routerLink]="['/ticket-list']"><i class="fa fa-circle-o"></i> List</a></li>
-          <li><a [routerLink]="['/ticket-new']"><i class="fa fa-circle-o"></i> New Ticket</a></li>
+          <li *ngIf="shared.user.profile == 'CUSTOMER'"><a [routerLink]="['/ticket-new']"><i class="fa fa-circle-o"></i> New Ticket</a></li>
         </ul>
       </li>
     </ul>
