--- a/src/app/components/ticket-list/ticket-list.component.html
+++ b/src/app/components/ticket-list/ticket-list.component.html
@@ -11,6 +11,17 @@
         <strong>{{ message.text }}</strong>
     </div>
     <div class="box-body">
+        <div class="form-group" *ngIf="shared.user.profile == 'TECHNICIAN'">
+            <div class="checkbox">
+                <label>
+                  <input type="checkbox" 
+                        name="assignedToMe"
+                        id="assignedToMe"
+                        [(ngModel)]="assignedToMe">
+                        <b>Assigned to me</b>
+                </label>
+            </div>
+        </div>
         <div class="form-group">
           <label for="inputNumber" class="col-sm-2 control-label">Number</label>
           <div class="col-sm-10">
@@ -42,6 +53,7 @@
                   <option>New</option>
                   <option>Resolved</option>
                   <option>Approved</option>
+                  <option>Disapproved</option>
                   <option>Assigned</option>
                   <option>Closed</option>
                 </select>
