--- a/src/app/components/passengers-list/passengers-list.component.html
+++ b/src/app/components/passengers-list/passengers-list.component.html
@@ -5,13 +5,13 @@
   <div class="col-md-10">
   <div class="box">
     <div class="box-header with-border">
-      <h3 class="box-title">Ticket List</h3>
+      <h3 class="box-title">Travel List</h3>
     </div>
     <div [ngClass]="classCss" role="alert" *ngIf="message">
         <strong>{{ message.text }}</strong>
     </div>
     <div class="box-body">
-        <div class="form-group" *ngIf="shared.user.profile == 'TECHNICIAN'">
+        <div class="form-group">
             <div class="checkbox">
                 <label>
                   <input type="checkbox" 
@@ -26,7 +26,7 @@
           <label for="inputNumber" class="col-sm-2 control-label">Number</label>
           <div class="col-sm-10">
             <input type="text" 
-                    [(ngModel)]="ticketFilter.number"
+                    [(ngModel)]="travelFilter.number"
                     name="number" 
                     class="form-control" 
                     id="inputNumber">
@@ -36,7 +36,7 @@
             <label for="inputTitle" class="col-sm-2 control-label">Title</label>
             <div class="col-sm-10">
               <input type="text" 
-                      [(ngModel)]="ticketFilter.title"
+                      [(ngModel)]="travelFilter.title"
                       name="title" 
                       class="form-control" 
                       id="inputTitle">
@@ -45,7 +45,7 @@
         <div class="form-group">
             <label for="inputStatus" class="col-sm-2 control-label">Status</label>
             <div class="col-sm-10">
-              <select [(ngModel)]="ticketFilter.status" 
+              <select [(ngModel)]="travelFilter.status" 
                   class="form-control select2" 
                   name="status"
                   id="inputStatus"
@@ -62,7 +62,7 @@
         <div class="form-group">
             <label for="inputPriority" class="col-sm-2 control-label">Priority</label>
             <div class="col-sm-10">
-              <select [(ngModel)]="ticketFilter.priority" 
+              <select [(ngModel)]="travelFilter.priority" 
                   class="form-control select2" 
                   name="priority"
                   id="inputPriority"
@@ -90,19 +90,19 @@
           <th style="width: 10px" *ngIf="shared.user.profile == 'CUSTOMER'">&nbsp;</th>
           <th style="width: 10px">&nbsp;</th>
         </tr>
-        <tr *ngFor="let ticket of listTicket">
-          <td>{{ticket.number}}</td>
-          <td>{{ticket.title}}</td>
-          <td>{{ticket.priority}}</td>
-          <td>{{ticket.status}}</td>
-          <td>{{ticket.user.email}}</td>
+        <tr *ngFor="let travel of listTravel">
+          <td>{{travel.number}}</td>
+          <td>{{travel.title}}</td>
+          <td>{{travel.priority}}</td>
+          <td>{{travel.status}}</td>
+          <td>{{travel.user.email}}</td>
           <td *ngIf="shared.user.profile == 'CUSTOMER'">
-              <button class="btn btn-primary" (click)="edit(ticket.id)">Edit</button>
+              <button class="btn btn-primary" (click)="edit(travel.id)">Edit</button>
           </td>
           <td *ngIf="shared.user.profile == 'CUSTOMER'">
-              <button class="btn btn-danger" (click)="delete(ticket.id)">Delete</button>
+              <button class="btn btn-danger" (click)="delete(travel.id)">Delete</button>
           </td>
-          <td><button class="btn btn-success" (click)="detail(ticket.id)">Detail</button></td>
+          <td><button class="btn btn-success" (click)="detail(travel.id)">Detail</button></td>
         </tr>
       </table>
     </div>
