--- a/src/app/components/passengers-new/passengers-new.component.html
+++ b/src/app/components/passengers-new/passengers-new.component.html
@@ -1,7 +1,7 @@
 <div class="col-md-6" style="margin-left:0%">
   <div class="box box-info">
     <div class="box-header with-border">
-      <h3 class="box-title">New Passengers</h3>
+      <h3 class="box-title">Cadastro de Passageiros</h3>
     </div>
     <form class="form-horizontal" #form="ngForm" (ngSubmit)="register()" novalidate>
       <div [ngClass]="classCss" role="alert" *ngIf="message">
@@ -9,10 +9,10 @@
       </div>
       <div class="box-body">
         <div [ngClass]="getFormGroupClass(title.invalid,title.dirty)">
-          <label for="inputTitle" class="col-sm-2 control-label">Title</label>
+          <label for="inputTitle" class="col-sm-2 control-label">Nome</label>
           <div class="col-sm-10">
             <input type="text" 
-                    [(ngModel)]="travel.title"
+                    [(ngModel)]="passengers.name"
                     name="title" 
                     class="form-control" 
                     id="inputTitle" 
@@ -22,43 +22,44 @@
             <span class="help-block" *ngIf="title.invalid && title.dirty">Title is required</span>
           </div>
         </div>
-        <div [ngClass]="getFormGroupClass(priority.invalid,priority.dirty)">
-          <label for="inputPriority" class="col-sm-2 control-label">Priority</label>
+        <div [ngClass]="getFormGroupClass(document.invalid,document.dirty)">
+          <label for="inputDocument" class="col-sm-2 control-label">Documento</label>
           <div class="col-sm-10">
-            <select [(ngModel)]="travel.priority" 
-                class="form-control select2" 
-                name="priority"
-                id="inputPriority"
-                #priority="ngModel"
-                style="width: 100%;"
-                required>
-                <option>High</option>
-                <option>Normal</option>
-                <option>Low</option>
-              </select>
-            <span class="help-block" *ngIf="priority.invalid && priority.dirty">Priority is required</span>
-          </div>
-        </div>
-        <div [ngClass]="getFormGroupClass(description.invalid,description.dirty)">
-          <label for="inputDescription" class="col-sm-2 control-label">Description</label>
-          <div class="col-sm-10">
-            <textarea [(ngModel)]="travel.description"
-                    name="description" 
-                    rows="3"
+            <input type="text" 
+                    [(ngModel)]="passengers.document"
+                    name="document" 
                     class="form-control" 
-                    id="inputDescription" 
-                    placeholder="Description..."
-                    #description="ngModel" 
+                    id="inputDocument" 
+                    placeholder="documento"
+                    #title="ngModel" 
                     required>
-            </textarea>        
-            <span class="help-block" *ngIf="description.invalid && description.dirty">Description is required</span>
+            <span class="help-block" *ngIf="document.invalid && document.dirty">Documento é obrigatório</span>
           </div>
         </div>
-        <div class="form-group">
-          <label for="inputDescription" class="col-sm-2 control-label">Image</label>
-          <div class="col-sm-10">
-            <img [src]="travel.image" width="50%" height="50%"> 
-            <input type="file" id="image"  (change)="onFileChange($event)">
+        <div [ngClass]="getFormGroupClass(birthDate.invalid,birthDate.dirty)">
+          <label for="inputBirthDate" class="col-sm-4 control-label">Data Nascimento</label>
+          <div class="col-sm-8">
+            <input type="date" 
+                    [(ngModel)]="passengers.birthDate"
+                    name="birthDate" 
+                    class="form-control" 
+                    id="inputBirthDate" 
+                    #title="ngModel"
+                    required>
+            <span class="help-block" *ngIf="title.invalid && title.dirty">Informe a Data de nascimento</span>
+          </div>
+        </div>
+        <div [ngClass]="getFormGroupClass(cpfCnpj.invalid,cpfCnpj.dirty)">
+          <label for="inputCpfCnpj" class="col-sm-2 control-label">CPF/CNPJ</label>
+          <div class="col-sm-8">
+            <input type="text" 
+                    [(ngModel)]="passengers.cpfCnpj"
+                    name="cpfCnpj" 
+                    class="form-control" 
+                    id="inputCpfCnpj" 
+                    #title="ngModel"
+                    required>
+            <span class="help-block" *ngIf="cpfCnpj.invalid && cpfCnpj.dirty">Informe a Data de nascimento</span>
           </div>
         </div>        
       </div>
